[Rocks] Fix the calculation of nextPrefix

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.1, 3.1.0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I had a bad bug in how I compute next prefix of a collection or index (++i instead of --i). This resulted in some random failures in MCI. All failures should be fixed with the patch.

      Rocks returns wrong results without this, so I would appreciate porting to 3.0 branch.

            Assignee:
            Ramon Fernandez
            Reporter:
            Igor Canadi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: