SERVER-17369 [Rocks] Fix the calculation of nextPrefix

Signed-off-by: Ramon Fernandez <ramon@mongodb.com>
(cherry picked from commit 99db24da095208e25ea3d2c7aeabf59ec2c28902)